package com.skuu.design.observer;

/**
 * @author dcx
 * @description 显示元素接口 - 用于显示信息
 * @create 2025-01-27
 */
public interface DisplayElement {
    
    /**
     * 显示信息
     */
    void display();
}
