package com.skuu.design.observer.displays;

import com.skuu.design.observer.DisplayElement;
import com.skuu.design.observer.Observer;
import com.skuu.design.observer.Subject;

/**
 * @author dcx
 * @description 体感温度显示板 - 具体观察者
 * @create 2025-01-27
 */
public class HeatIndexDisplay implements Observer, DisplayElement {
    
    private float heatIndex = 0.0f;
    private Subject weatherData;
    
    public HeatIndexDisplay(Subject weatherData) {
        this.weatherData = weatherData;
        weatherData.registerObserver(this);
    }
    
    @Override
    public void update(float temperature, float humidity, float pressure) {
        heatIndex = computeHeatIndex(temperature, humidity);
        display();
    }
    
    /**
     * 计算体感温度
     */
    private float computeHeatIndex(float t, float rh) {
        float index = (float) ((16.923 + (0.185212 * t) + (5.37941 * rh) - (0.100254 * t * rh)
                + (0.00941695 * (t * t)) + (0.00728898 * (rh * rh))
                + (0.000345172 * (t * t * rh)) - (0.000814971 * (t * rh * rh))
                + (0.0000102102 * (t * t * rh * rh)) - (0.000038646 * (t * t * t))
                + (0.0000291583 * (rh * rh * rh)) + (0.00000142721 * (t * t * t * rh))
                + (0.000000197483 * (t * rh * rh * rh)) - (0.0000000218429 * (t * t * t * rh * rh))
                + 0.000000000843296 * (t * t * rh * rh * rh))
                - (0.0000000000481975 * (t * t * t * rh * rh * rh)));
        return index;
    }
    
    @Override
    public void display() {
        System.out.println("🌡️ 体感温度显示板:");
        System.out.println("   体感温度: " + String.format("%.2f", heatIndex) + "°C");
    }
}
